hphp/hack/test/typecheck/new_generic_bad.php.exp
File "new_generic_bad.php", line 3, characters 9-9:
Name already bound: T (Naming[2012])
File "new_generic_bad.php", line 3, characters 7-7:
Previous definition is here
