hphp/hack/test/typecheck/new_generic_bad.php
<?hh

class T<T> {
  public static function f(): T {
    return new T();
  }
}
